...

    return { position: 'absolute', ...style };
  };

  return (
    <Animated.ScrollView
      testID="mapCardList_id"
      horizontal
      pagingEnabled
      scrollEnabled
      scrollEventThrottle={1}
      showsHorizontalScrollIndicator={false}
      style={getStyleMapCardList()}
...
